# roboto-example-action

./: README.md
check-magnetometer-norm/: DEVELOPING.md  Dockerfile  README.md  action.json  pyproject.toml
check-magnetometer-norm/scripts/: build.sh  deploy.sh
check-magnetometer-norm/src/check_magnetometer_norm/: logger.py  main.py
check-magnetometer-norm/test/: test_main.py
check_camera_blur/: Dockerfile  README.md  action.json  requirements.runtime.txt
check_magnetometer_norm/: Dockerfile  README.md  action.json  requirements.runtime.txt
create-derivative-topic/: DEVELOPING.md  Dockerfile  README.md  action.json  pyproject.toml
create-derivative-topic/scripts/: build.sh  deploy.sh
create-derivative-topic/src/create_derivative_topic/: logger.py  main.py  tracking_error.py  utils.py
create-derivative-topic/test/: test_main.py
create_ai_events/: .gitignore  DEVELOPING.md  Dockerfile  README.md  action.json  pyproject.toml
create_ai_events/scripts/: build.sh  deploy.sh
create_ai_events/src/create_ai_events/: ai_chat.py  logger.py  main.py  parser.py  prompts.py
create_ai_events/test/: test_main.py  test_parser.py
create_ai_events/test/fixtures/: example_ai_response.json
create_ai_summary/: DEVELOPING.md  Dockerfile  README.md  action.json  pyproject.toml
create_ai_summary/scripts/: build.sh  deploy.sh
create_ai_summary/src/create_ai_summary/: ai_summarizer.py  logger.py  main.py  prompts.py
create_ai_summary/test/: test_main.py
example-email-action/: .gitignore  DEVELOPING.md  Dockerfile  README.md  TESTING.md  action.json  (+3 more)
(+36 files in other folders)
