[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "check_magnetometer_norm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "roboto[analytics]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
