[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "create_derivative_topic"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "roboto[analytics,ingestion]>=0.30.0",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
